--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
 	<style>
 		.review {
+
 			background: #FFFFFF;
 			max-width: 735px;
 			min-width: 735px;
@@ -26,6 +27,7 @@
 			}
 
 			.text{
+				overflow-y: auto;
 				align-content: left;
 				float: right;
 				height: 300px;
@@ -64,7 +66,7 @@
 				border-color: rgba(0,0,0,0.12);
 				border-radius: 4px;
 				border-style: solid;
-				width: 25em;
+				width: 24em;
 				padding: 16px;
 				box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 2px;
 			}
@@ -95,7 +97,7 @@
 				border-color: rgba(0,0,0,0.12);
 				border-radius: 4px;
 				border-style: solid;
-				width: 25em;
+				width: 24em;
 				padding: 16px;
 				box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 2px;
 			}
@@ -129,9 +131,20 @@
 			<div class='text'>
 				<h1>Welcome to your GridPlus Lattice1!</h1>
 				<p>
-					Let's get your new Hardware wallet set up.
+					Let's get your new Hardware wallet set up.Let's get your new Hardware wallet set up.Let's get your new Hardware wallet set up.Let's get your new Hardware wallet set up.Let's get your new Hardware wallet set up.Let's get your new Hardware wallet set up.Let's get your new Hardware wallet set up.Let's get your new Hardware wallet set up.Let's get your new Hardware wallet set up.Let's get your new Hardware wallet set up.Let's get your new Hardware wallet set up.Let's get your new Hardware wallet set up.Let's get your new Hardware wallet set up.Let's get your new Hardware wallet set up.Let's get your new Hardware wallet set up.Let's get your new Hardware wallet set up.Let's get your new Hardware wallet set up.
 				</p>
 			</div>
+
+
+		<div class="right__button">
+			<button id="next" onclick="nextReview()">
+				Next
+				<svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" preserveAspectRatio="xMidYMid meet" data-rnw-int-class="nearest__263-1719__" class="r-1rasi3h r-1472mwg r-lrsllp" style="vertical-align: middle;">
+				<path d="M5 12h14M12 5l7 7-7 7"></path>
+	   			</svg>
+			</button>
+		</div>
+
 		</div>
 
 
@@ -153,6 +166,17 @@
 					</button>
 				</p>
 			</div>
+
+<div class="left__button">
+			<button id="prev" onclick="previousReview()">
+				<svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" preserveAspectRatio="xMidYMid meet" data-rnw-int-class="nearest__263-1719__" class="r-1rasi3h r-1472mwg r-lrsllp" style="vertical-align: middle;">
+				<path d="M19 12H5M12 19l-7-7 7-7"></path>
+	   			</svg>
+	   			Previous
+			</button>
+		</div>
+
+
 		</div>
 
 
@@ -168,6 +192,24 @@
 					Further stuff. to read about
 				</p>
 			</div>
+
+<div class="left__button">
+			<button id="prev" onclick="previousReview()">
+				<svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" preserveAspectRatio="xMidYMid meet" data-rnw-int-class="nearest__263-1719__" class="r-1rasi3h r-1472mwg r-lrsllp" style="vertical-align: middle;">
+				<path d="M19 12H5M12 19l-7-7 7-7"></path>
+	   			</svg>
+	   			Previous
+			</button>
+		</div>
+		<div class="right__button">
+			<button id="next" onclick="nextReview()">
+				Next
+				<svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" preserveAspectRatio="xMidYMid meet" data-rnw-int-class="nearest__263-1719__" class="r-1rasi3h r-1472mwg r-lrsllp" style="vertical-align: middle;">
+				<path d="M5 12h14M12 5l7 7-7 7"></path>
+	   			</svg>
+			</button>
+		</div>
+
 		</div>
 
 
@@ -184,6 +226,24 @@
 					Further stuff. to read about
 				</p>
 			</div>
+
+<div class="left__button">
+			<button id="prev" onclick="carousel(2-1)">
+				<svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" preserveAspectRatio="xMidYMid meet" data-rnw-int-class="nearest__263-1719__" class="r-1rasi3h r-1472mwg r-lrsllp" style="vertical-align: middle;">
+				<path d="M19 12H5M12 19l-7-7 7-7"></path>
+	   			</svg>
+	   			Previous
+			</button>
+		</div>
+		<div class="right__button">
+			<button id="next" onclick="nextReview()">
+				Next
+				<svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" preserveAspectRatio="xMidYMid meet" data-rnw-int-class="nearest__263-1719__" class="r-1rasi3h r-1472mwg r-lrsllp" style="vertical-align: middle;">
+				<path d="M5 12h14M12 5l7 7-7 7"></path>
+	   			</svg>
+			</button>
+		</div>
+
 		</div>
 
 
@@ -200,47 +260,40 @@
 					Further stuff. to read about
 				</p>
 			</div>
-		</div>
 
-
-
-
-
-
-
-		<div class="left__button">
-			<button id="prev" onclick="previousReview()">
+<div class="left__button">
+			<button id="prev" onclick="carousel(2-1)">
 				<svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" preserveAspectRatio="xMidYMid meet" data-rnw-int-class="nearest__263-1719__" class="r-1rasi3h r-1472mwg r-lrsllp" style="vertical-align: middle;">
 				<path d="M19 12H5M12 19l-7-7 7-7"></path>
 	   			</svg>
 	   			Previous
 			</button>
 		</div>
-		<div class="right__button">
-			<button id="next" onclick="nextReview()">
-				Next
-				<svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" preserveAspectRatio="xMidYMid meet" data-rnw-int-class="nearest__263-1719__" class="r-1rasi3h r-1472mwg r-lrsllp" style="vertical-align: middle;">
-				<path d="M5 12h14M12 5l7 7-7 7"></path>
-	   			</svg>
-			</button>
+
+
 		</div>
+
+
+
+
+
+
+
+
 	</div>
 
 	<script>
 		let rev = 0;
 		carousel(rev);
-		let pastPage = 0;
-
-		function undecision(pastPage){
-			rev = pastPage + 1;
-		}
 
 		function previousReview() {
 			rev = rev - 1;
 			carousel(rev);
+			console.log(rev + "prev");
 		}
 
 		function nextReview() {
+
 			rev = rev + 1;
 			carousel(rev);
 		}
@@ -262,6 +315,8 @@
 			}
 			reviews[review].style.display = "block";
 			rev=review;
+			console.log(rev + " carousel");
+
 		}
 	</script>
 </body>
