--- a/index.html
+++ b/index.html
@@ -711,23 +711,20 @@ element {
 					<br>
 					Restore from Seed Phrase
 				</button>
-				<button id="next" onclick="carousel()" style="width:10em;">
-				
-					<svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-						 width="973.1px" height="973.1px" viewBox="0 0 973.1 973.1" xml:space="preserve"
-						>
-					<g>
-						<path d="M502.29,788.199h-47c-33.1,0-60,26.9-60,60v64.9c0,33.1,26.9,60,60,60h47c33.101,0,60-26.9,60-60v-64.9
-							C562.29,815,535.391,788.199,502.29,788.199z"/>
-						<path d="M170.89,285.8l86.7,10.8c27.5,3.4,53.6-12.4,63.5-38.3c12.5-32.7,29.9-58.5,52.2-77.3c31.601-26.6,70.9-40,117.9-40
-							c48.7,0,87.5,12.8,116.3,38.3c28.8,25.6,43.1,56.2,43.1,92.1c0,25.8-8.1,49.4-24.3,70.8c-10.5,13.6-42.8,42.2-96.7,85.9
-							c-54,43.7-89.899,83.099-107.899,118.099c-18.4,35.801-24.8,75.5-26.4,115.301c-1.399,34.1,25.8,62.5,60,62.5h49
-							c31.2,0,57-23.9,59.8-54.9c2-22.299,5.7-39.199,11.301-50.699c9.399-19.701,33.699-45.701,72.699-78.1
-							C723.59,477.8,772.79,428.4,795.891,392c23-36.3,34.6-74.8,34.6-115.5c0-73.5-31.3-138-94-193.4c-62.6-55.4-147-83.1-253-83.1
-							c-100.8,0-182.1,27.3-244.1,82c-52.8,46.6-84.9,101.8-96.2,165.5C139.69,266.1,152.39,283.5,170.89,285.8z"/>
-					</g>
-					</svg>
-
+				<button id="next" onclick="window.location.href='https://gridplus.zendesk.com/hc/en-us/requests/new'" style="width:10em;">
+						<svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+							 width="973.1px" height="973.1px" viewBox="0 0 973.1 973.1" xml:space="preserve">
+						<g>
+							<path d="M502.29,788.199h-47c-33.1,0-60,26.9-60,60v64.9c0,33.1,26.9,60,60,60h47c33.101,0,60-26.9,60-60v-64.9
+								C562.29,815,535.391,788.199,502.29,788.199z"/>
+							<path d="M170.89,285.8l86.7,10.8c27.5,3.4,53.6-12.4,63.5-38.3c12.5-32.7,29.9-58.5,52.2-77.3c31.601-26.6,70.9-40,117.9-40
+								c48.7,0,87.5,12.8,116.3,38.3c28.8,25.6,43.1,56.2,43.1,92.1c0,25.8-8.1,49.4-24.3,70.8c-10.5,13.6-42.8,42.2-96.7,85.9
+								c-54,43.7-89.899,83.099-107.899,118.099c-18.4,35.801-24.8,75.5-26.4,115.301c-1.399,34.1,25.8,62.5,60,62.5h49
+								c31.2,0,57-23.9,59.8-54.9c2-22.299,5.7-39.199,11.301-50.699c9.399-19.701,33.699-45.701,72.699-78.1
+								C723.59,477.8,772.79,428.4,795.891,392c23-36.3,34.6-74.8,34.6-115.5c0-73.5-31.3-138-94-193.4c-62.6-55.4-147-83.1-253-83.1
+								c-100.8,0-182.1,27.3-244.1,82c-52.8,46.6-84.9,101.8-96.2,165.5C139.69,266.1,152.39,283.5,170.89,285.8z"/>
+						</g>
+						</svg>
 					<br>
 					Contact GridPlus
 				</button>
@@ -844,7 +841,7 @@ element {
 			</div>
 
 			<div class="right__button">
-				<button id="next" onclick="carousel(12)">
+				<button id="next" onclick="carousel(12), left(11)">
 					Next
 					<svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" preserveAspectRatio="xMidYMid meet" data-rnw-int-class="nearest__263-1719__" class="r-1rasi3h r-1472mwg r-lrsllp" style="vertical-align: middle;">
 					<path d="M5 12h14M12 5l7 7-7 7"></path>
@@ -876,8 +873,8 @@ element {
 				</p>
 			</div>
 
-			<div class="left__button">
-				<button id="prev" onclick="carousel(11)">
+			<div class="left__button" onclick="carousel(left)">
+				<button id="prev" >
 					<svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" preserveAspectRatio="xMidYMid meet" data-rnw-int-class="nearest__263-1719__" class="r-1rasi3h r-1472mwg r-lrsllp" style="vertical-align: middle;">
 					<path d="M19 12H5M12 19l-7-7 7-7"></path>
 		   			</svg>
@@ -1091,7 +1088,7 @@ element {
 			</div>
 
 			<div class="left__button">
-				<button id="prev" onclick="carousel(10)">
+				<button id="prev" onclick="carousel(9)">
 					<svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" preserveAspectRatio="xMidYMid meet" data-rnw-int-class="nearest__263-1719__" class="r-1rasi3h r-1472mwg r-lrsllp" style="vertical-align: middle;">
 					<path d="M19 12H5M12 19l-7-7 7-7"></path>
 		   			</svg>
@@ -1100,7 +1097,7 @@ element {
 			</div>
 
 			<div class="right__button">
-				<button id="next" onclick="carousel(12)">
+				<button id="next" onclick="carousel(12),left(16)">
 					Next
 					<svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" preserveAspectRatio="xMidYMid meet" data-rnw-int-class="nearest__263-1719__" class="r-1rasi3h r-1472mwg r-lrsllp" style="vertical-align: middle;">
 					<path d="M5 12h14M12 5l7 7-7 7"></path>
@@ -1149,12 +1146,12 @@ element {
 				<img src='images/grid+.png'>
 			</div>
 			<div class='text'>
-				<h1>{18 (9-alt)} Creating a passphrase (optional)</h1>
+				<h1>{18} Is there a passphrase? (optional)</h1>
 				<i>{show button clicked, then show passphrase screen}</i>
 				<p>
 					A passphrase is an optional extra word you can add to your seed phrase (this will make the seed phrase 25 words long instead of the standard 24 words) to add an extra layer of security. Even if someone had your seed phrase, but not your passphrase, they could not access your wallet.
 					<BR><BR>
-					/Important! Only create a passphrase if the wallet you are importing <b>was created with one!</b>
+					/Important! Only input a passphrase if the wallet you are importing <b>was created with one!</b>
 					If you have 13/19/25 words written down instead of 12/18/24, the passphrase is the last word./
 					<BR><BR>
 
@@ -1172,12 +1169,12 @@ element {
 			</div>
 
 			<div class="right__button">
-				<button id="next" onclick="carousel(10)">
+				<button id="next" onclick="carousel(20)">
 					Yes
 				</button>
 			</div>
 			<div class="right__button">
-				<button id="next" onclick="carousel(16)">
+				<button id="next" onclick="carousel(19)">
 					No
 				</button>
 			</div>
@@ -1215,7 +1212,7 @@ element {
 			</div>
 
 			<div class="right__button">
-				<button id="next" onclick="carousel(12)">
+				<button id="next" onclick="carousel(12),left(19)">
 					Next
 					<svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" preserveAspectRatio="xMidYMid meet" data-rnw-int-class="nearest__263-1719__" class="r-1rasi3h r-1472mwg r-lrsllp" style="vertical-align: middle;">
 					<path d="M5 12h14M12 5l7 7-7 7"></path>
@@ -1224,12 +1221,98 @@ element {
 			</div>
 		</div>
 
+<!-- 20 Import Extra Seed Word -->
+		<div class="review__items">
+			<div class='image'>
+				<img src='images/grid+.png'>
+			</div>
+			<div class='text'>
+				<h1>{20} Input your passphrase (Extra seedword)</h1>
+				<i>{Show extra seed word page}</i>
+				<p>
+					Enter your extra seed word and hit ENT.
+					<br><BR>
+					/Make sure your passphrase is entered exactly as it was when create, 
+					This is like a password and is case-sensitive./
+				</p>
+			</div>
+
+			<div class="left__button">
+				<button id="prev" onclick="carousel(19)">
+					<svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" preserveAspectRatio="xMidYMid meet" data-rnw-int-class="nearest__263-1719__" class="r-1rasi3h r-1472mwg r-lrsllp" style="vertical-align: middle;">
+					<path d="M19 12H5M12 19l-7-7 7-7"></path>
+		   			</svg>
+		   			Back
+				</button>
+			</div>
+
+			<div class="right__button">
+				<button id="next" onclick="carousel(21)" style="width:19em;">
+					Next
+					<svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" preserveAspectRatio="xMidYMid meet" data-rnw-int-class="nearest__263-1719__" class="r-1rasi3h r-1472mwg r-lrsllp" style="vertical-align: middle;">
+					<path d="M5 12h14M12 5l7 7-7 7"></path>
+		   			</svg>
+				</button>
+			</div>
+		</div>
+
+<!-- 21 Mnemonic Phrase -->
+		<div class="review__items">
+			<div class='image'>
+				<img src='images/grid+.png'>
+			</div>
+			<div class='text'>
+				<h1>{21} Mnemonic Phrase</h1>
+				<i>{Show Mnemonic Phrase Page}</i>
+				<p>
+					You will now see 12/18/24 words of your seed phrase that you entered.
+					<b>Make sure to write the phrase down!</b> 
+					<br><br>
+					/Double check that the seed phrase is correct!<br>
+					An incorrect seed phrase will either fail to import or result
+					in unknown addresses./
+					<BR><br>
+					/Please note that the passphrase will not be shown here!
+					You can check that you have the right addresses on the device if you go to 
+					Lattice1 Addresses > Ethereum/
+					<br><br>
+					Are you sure the words are correct? If Yes, you can then tap on Next.
+					<br><br>
+					/If the words are NOT correct, you will have to reset the wallet and try again from the beginning.
+					Finish the setup guide and then go to "Manage Wallets > Reset Lattice Wallet"./		
+				</p>
+			</div>
+
+			<div class="left__button">
+				<button id="prev" onclick="carousel(20)">
+					<svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" preserveAspectRatio="xMidYMid meet" data-rnw-int-class="nearest__263-1719__" class="r-1rasi3h r-1472mwg r-lrsllp" style="vertical-align: middle;">
+					<path d="M19 12H5M12 19l-7-7 7-7"></path>
+		   			</svg>
+		   			Back
+				</button>
+			</div>
+
+			<div class="right__button">
+				<button id="next" onclick="carousel(12),left(21)">
+					Next
+					<svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" preserveAspectRatio="xMidYMid meet" data-rnw-int-class="nearest__263-1719__" class="r-1rasi3h r-1472mwg r-lrsllp" style="vertical-align: middle;">
+					<path d="M5 12h14M12 5l7 7-7 7"></path>
+		   			</svg>
+				</button>
+			</div>
+		</div>
 
 </div>
 
 	<script>
 		let rev = 8;
 		carousel(rev);
+
+		function left(leftFrom){
+			left = leftFrom;
+			console.log(left);
+			return left;
+		}
 
 		function previousReview() {
 			rev = rev - 1;
@@ -1258,9 +1341,10 @@ element {
 			for (let i = 0; i < reviews.length; i++) {
 				reviews[i].style.display = "none";
 			}
+				console.log(rev + " carousel");
 			reviews[review].style.display = "block";
 			rev=review;
-			console.log(rev + " carousel");
+
 
 		}
 	</script>
