--- a/index.html
+++ b/index.html
@@ -98,78 +98,11 @@
 * {
   box-sizing: border-box;
 }
-element {
-  white-space: pre-wrap;
-  overflow-wrap: break-word;
-			}
 
-			.callout-container{
-				border-color: rgb(211, 61, 61);
-				padding-right: 24px;
-				-moz-box-align: stretch;
-				align-items: stretch;
-				border-top-left-radius: 4px;
-				border-left-width: 4px;
-				border-bottom-left-radius: 4px;
-				min-width: 0px;
-				min-height: 0px;
-				box-sizing: border-box;
-				position: relative;
-				z-index: 0;
-				padding-left: 40px;
-				-moz-box-direction: normal;
-				-moz-box-orient: vertical;
-				flex-direction: column;
-				width: 100%;
-				background-color: rgb(245, 247, 249);
-				flex-shrink: 1;
-				-moz-box-flex: 1;
-				flex-grow: 1;
-				flex-basis: 0%;
-				flex-grow: 1;
-				padding: 0px;
-				margin: 0px;
-				display: flex;
-				border-width: 0px;
-  				border-left-width: 0px;
-  				border-style: solid;
-  				white-space: pre-wrap;
-				overflow-wrap: break-word;
-			}
-
-			.callout-note{
-				padding-bottom: 4px;
-				padding-top: 16px;
-				min-width: 0px;
-				min-height: 0px;
-				flex-shrink: 0;
-				box-sizing: border-box;
-				-moz-box-align: stretch;
-				align-items: stretch;
-				position: relative;
-				z-index: 0;
-				flex-basis: auto;
-				-moz-box-direction: normal;
-				-moz-box-orient: vertical;
-				flex-direction: column;
-				padding: 0px;
-				margin: 0px;
-				display: flex;
-				border-width: 0px;
-				border-style: solid;
-				border-color: rgb(0, 0, 0);
-
-
-
-			}
-
-			.callout-important{
-
-			}
 
 			.review__items img {
-				height: 250px;
-				width: 250px;
+				height: 300px;
+				width: 348px;
 
 			}
 			
@@ -262,7 +195,7 @@ element {
 	<div class="review">
 		<div class="review__items">
 			<div class='image'>
-				<img src='images/grid+.png'>
+				<img src='images/Box Intro.png'>
 			</div>
 			<div class='text'>
 				<h1>{0} Welcome to your GridPlus Lattice1!</h1>
@@ -289,7 +222,7 @@ element {
 <!-- 1 -->
 		<div class="review__items">
 			<div class='image'>
-				<img src='images/grid+.png'>
+				<img src='images/OpenBoxContent.gif'>
 			</div>
 			<div class='text'>
 				<h1>{1} Unboxing</h1>
@@ -429,7 +362,7 @@ element {
 				<p>
 					The device will now show you available Wi-Fi networks. Once this list is loaded, select your Wi-Fi and type in your password. The device can take some time to connect and when it's done, you're good to move onto the next step.
 					<br><br>
-					<i>The Lattice1's WiFi module supports 2.4 GHz only, along with the most commonly used encryption types. If you are having any problems with Wi-Fi whatsoever (e.g. you can't see your network or cannot connect to it) please check {Lattice1 Wi-Fi troubleshooting}</i>
+					<i>The Lattice1's WiFi module supports 2.4 GHz only, along with the most commonly used encryption types. If you are having any problems with Wi-Fi whatsoever (e.g. you can't see your network or cannot connect to it) please check <a href='https://docs.gridplus.io/lattice1-wifi-troubleshooting'>Lattice1 Wi-Fi troubleshooting</a></i>
 				</p>
 			</div>
 
@@ -598,7 +531,7 @@ element {
 					<div class='callout-box'>	
 						<div class="callout">
 							<div class='callout-note'>
-								/Your wallet is as sate as the least sate app it's ever been on./
+								/Your wallet is as safe as the least safe app it's ever been on./
 							</div>
 						</div>
 					</div>
@@ -743,7 +676,7 @@ element {
 				<p>
 					A passphrase is an optional extra word you can add to your seed phrase (this will make the seed phrase 25 words long instead of the standard 24 words) to add an extra layer of security. Even if someone had your seed phrase, but not your passphrase, they could not access your wallet.
 					<BR><BR>
-					Some people choose this option fo radditional security, but if you're not an advanced crypto user, you probably don't need one.
+					Some people choose this option for additional security, but if you're not an advanced crypto user, you probably don't need one.
 					<BR><BR>
 					/Note that adding a pass-phrase (25th word) will change the addresses that are derived from the seed phrase as it is actually changing the seed phrase by adding a word and not a password to log into the wallet./
 					<BR><BR>
